--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -50,3 +50,19 @@
     margin-right: 10px;
     font-size: 14px;
   }
+
+  @keyframes movieBeat {
+    0% {
+        transform: none;
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1.1);
+  }
+}
+.movies .movie:hover {
+    will-change: transform;
+    animation: movieBeat 1.5s;
+}
