--- a/src/routes/Detail.css
+++ b/src/routes/Detail.css
@@ -1,23 +1,40 @@
-.container .details {
-    width: 50%;
-    margin: 70px auto;
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    color: black;
-    box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25), 
-    0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
+.movieDetail__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
-
-.details img {
-    max-width: 250px;
+.movieDetail__container img {
+    max-width: 350px;
     width: 100%;
     box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
     0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 }
-
+.movieDetail__container .movieDetail__data {
+    width: 65%;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;   
+}
+.movieDetail__data h3,
+.movieDetail__data h5,
+.movieDetail__data ul {
+    margin: 5px auto;
+    display: flex;
+    font-weight: 400;
+}
+.movieDetail__data h3 {
+    font-size: 30px;
+}
+.movieDetail__data h5 {
+    font-size: 18px;
+}
 @media screen and (max-width: 1090px) {
-    .details {
+    .movieDetail__container {
       width: 100%;
+      margin-bottom: 70px;
     }
 }
